--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,11 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
+            "assets": [{
+              "glob": "**/*",
+              "input": "node_modules/monaco-editor",
+              "output": "assets/monaco-editor"
+            },
               "src/favicon.ico",
               "src/assets"
             ],
@@ -85,6 +89,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+
               "src/favicon.ico",
               "src/assets"
             ],
